force-app/main/default/objects/DM_Investor_Loan_Transaction__c/DM_Investor_Loan_Transaction__c.object-meta.xml
<CustomObject>
    <label>DM Investor Loan Transaction</label>
    <nameField>
        <label>DM Investor Loan Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Investor Loan Transaction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>