force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_ACH_Filename__c.field-meta.xml
<CustomField>
    <fullName>DM_ACH_Filename__c</fullName>
    <label>DM ACH Filename</label>
    <length>100</length>
    <type>Text</type>
</CustomField>