force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Approval_Date_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>DM_Approval_Date_Snapshot__c</fullName>
    <label>DM Approval Date Snapshot</label>
    <type>Date</type>
</CustomField>