force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Balance_After__c.field-meta.xml
<CustomField>
    <fullName>DM_Balance_After__c</fullName>
    <label>DM Balance After</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>