force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Certificate_Rate_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>DM_Certificate_Rate_Snapshot__c</fullName>
    <label>DM Certificate Rate Snapshot</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>