force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Custom_Field_2__c.field-meta.xml
<CustomField>
    <fullName>DM_Custom_Field_2__c</fullName>
    <label>DM Custom Field 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>