force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_GL_Post_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_GL_Post_Date__c</fullName>
    <label>DM GL Post Date</label>
    <type>Date</type>
</CustomField>