force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Interest_Accrual_From_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Accrual_From_Date__c</fullName>
    <label>DM Interest Accrual From Date</label>
    <type>Date</type>
</CustomField>