force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Interest_Accrual_Prin_Amount__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Accrual_Prin_Amount__c</fullName>
    <label>DM Interest Accrual Prin Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>