force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Interest_Exempted_From_Serv_Fee_Snaps__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Exempted_From_Serv_Fee_Snaps__c</fullName>
    <label>DM Interest Exempted From Serv Fee Snaps</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>