force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Interest_Rate_On_Loan_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Rate_On_Loan_Snapshot__c</fullName>
    <label>DM Interest Rate On Loan Snapshot</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>