force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Interest_Rounding_Error_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Rounding_Error_Snapshot__c</fullName>
    <label>DM Interest Rounding Error Snapshot</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>