force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Investment_Amount_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>DM_Investment_Amount_Snapshot__c</fullName>
    <label>DM Investment Amount Snapshot</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>