force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Investment_Order__c.field-meta.xml
<CustomField>
    <fullName>DM_Investment_Order__c</fullName>
    <label>DM Investment Order</label>
    <referenceTo>DM_Investment_Order__c</referenceTo>
    <relationshipLabel>DM Investor Loan Transaction</relationshipLabel>
    <relationshipName>DM_Investor_Loan_Transaction</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>