force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Last_Interest_Accrual_Date_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>DM_Last_Interest_Accrual_Date_Snapshot__c</fullName>
    <label>DM Last Interest Accrual Date Snapshot</label>
    <type>Date</type>
</CustomField>