force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Late_Fees_Amount_Paid_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>DM_Late_Fees_Amount_Paid_Snapshot__c</fullName>
    <label>DM Late Fees Amount Paid Snapshot</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>