force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Loan_Delinquent_Days_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>DM_Loan_Delinquent_Days_Snapshot__c</fullName>
    <label>DM Loan Delinquent Days Snapshot</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>