force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Loan_Payment_Transaction__c.field-meta.xml
<CustomField>
    <fullName>DM_Loan_Payment_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM Loan Payment Transaction</label>
    <referenceTo>DM_Loan_Payment_Transaction__c</referenceTo>
    <relationshipLabel>DM Investor Loan Transaction</relationshipLabel>
    <relationshipName>DM_Investor_Loan_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>