force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Loan_Payment_Transaction_Time__c.field-meta.xml
<CustomField>
    <fullName>DM_Loan_Payment_Transaction_Time__c</fullName>
    <label>DM Loan Payment Transaction Time</label>
    <type>DateTime</type>
</CustomField>