force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Loan_Status_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>DM_Loan_Status_Snapshot__c</fullName>
    <label>DM Loan Status Snapshot</label>
    <length>100</length>
    <type>Text</type>
</CustomField>