force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Old_Certificate_Rate__c.field-meta.xml
<CustomField>
    <fullName>DM_Old_Certificate_Rate__c</fullName>
    <label>DM Old Certificate Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>