force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Parent_Txn_Ref__c.field-meta.xml
<CustomField>
    <fullName>DM_Parent_Txn_Ref__c</fullName>
    <label>DM Parent Txn Ref</label>
    <length>20</length>
    <type>Text</type>
</CustomField>