force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Principal__c.field-meta.xml
<CustomField>
    <fullName>DM_Principal__c</fullName>
    <label>DM Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>