force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Reason__c.field-meta.xml
<CustomField>
    <fullName>DM_Reason__c</fullName>
    <label>DM Reason</label>
    <length>200</length>
    <type>Text</type>
</CustomField>