force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Rebate_Amount_On_Refinance__c.field-meta.xml
<CustomField>
    <fullName>DM_Rebate_Amount_On_Refinance__c</fullName>
    <label>DM Rebate Amount On Refinance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>