force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Rebate_Payment__c.field-meta.xml
<CustomField>
    <fullName>DM_Rebate_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Rebate Payment</label>
    <type>Checkbox</type>
</CustomField>