force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Reinvest_Interest__c.field-meta.xml
<CustomField>
    <fullName>DM_Reinvest_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Reinvest Interest</label>
    <type>Checkbox</type>
</CustomField>