force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Sent_to_ACH__c.field-meta.xml
<CustomField>
    <fullName>DM_Sent_to_ACH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Sent to ACH</label>
    <type>Checkbox</type>
</CustomField>