force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Service_Rate_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>DM_Service_Rate_Snapshot__c</fullName>
    <label>DM Service Rate Snapshot</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>