force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Snapshot_Enabled_Flag__c.field-meta.xml
<CustomField>
    <fullName>DM_Snapshot_Enabled_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Snapshot Enabled Flag</label>
    <type>Checkbox</type>
</CustomField>