force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_SS_Rebate_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>DM_SS_Rebate_Amount_Paid__c</fullName>
    <label>DM SS Rebate Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>