force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Status_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>DM_Status_Snapshot__c</fullName>
    <label>DM Status Snapshot</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>De-Active</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>