force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Total_Service_Charge__c.field-meta.xml
<CustomField>
    <fullName>DM_Total_Service_Charge__c</fullName>
    <label>DM Total Service Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>