force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Transaction_Code__c.field-meta.xml
<CustomField>
    <fullName>DM_Transaction_Code__c</fullName>
    <label>DM Transaction Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
            </value>
            <value>
                <fullName>CERTIFICATE RATE CHANGE</fullName>
            </value>
            <value>
                <fullName>PAYMENT APPROVAL</fullName>
            </value>
            <value>
                <fullName>SERVICE RATE CHANGE</fullName>
            </value>
            <value>
                <fullName>DE-ACTIVE</fullName>
            </value>
            <value>
                <fullName>PAYMENT RELEASE</fullName>
            </value>
            <value>
                <fullName>PAYMENT REVERSED</fullName>
            </value>
            <value>
                <fullName>PRINCIPAL REINVESTED</fullName>
            </value>
            <value>
                <fullName>INTEREST REINVESTED</fullName>
            </value>
            <value>
                <fullName>PRINCIPAL &amp; INTEREST REINVESTED</fullName>
            </value>
            <value>
                <fullName>CHARGE OFF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>