force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Transaction_Date__c</fullName>
    <label>DM Transaction Date</label>
    <type>Date</type>
</CustomField>