force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Transaction_Description__c.field-meta.xml
<CustomField>
    <fullName>DM_Transaction_Description__c</fullName>
    <label>DM Transaction Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>