force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Txn_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_Txn_Type__c</fullName>
    <label>DM Txn Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rebate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>