force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_VAT__c.field-meta.xml
<CustomField>
    <fullName>DM_VAT__c</fullName>
    <label>DM VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>