force-app/main/default/objects/DM_Investor_Loan_Transaction__c/fields/DM_Waived__c.field-meta.xml
<CustomField>
    <fullName>DM_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Waived</label>
    <type>Checkbox</type>
</CustomField>